explo-ton/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: explo
  namespace: explo
  labels:
    app: explo
spec:
  type: ClusterIP
  ports:
  - port: 7288
    targetPort: 7288
    protocol: TCP
    name: http
  selector:
    app: explo
